WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273116
[WPE] Missing UNUSED_PARAM for screendisplayID in PlatformScreenWPE
https://bugs.webkit.org/show_bug.cgi?id=273116
Summary
[WPE] Missing UNUSED_PARAM for screendisplayID in PlatformScreenWPE
Przemyslaw Gorszkowski
Reported
2024-04-23 03:05:47 PDT
If we compile webkit without ENABLE_WPE_PLATFORM then we get compiler error: In file included from /home/pgorszkowski/WebKit/WebKitBuild/WPE/Release/WebCore/DerivedSources/unified-sources/UnifiedSource-3c72abbe-81.cpp:2: /home/pgorszkowski/WebKit/Source/WebCore/platform/wpe/PlatformScreenWPE.cpp: In function ‘double WebCore::screenDPI(PlatformDisplayID)’: /home/pgorszkowski/WebKit/Source/WebCore/platform/wpe/PlatformScreenWPE.cpp:97:36: error: unused parameter ‘screendisplayID’ [-Werror=unused-parameter] 97 | double screenDPI(PlatformDisplayID screendisplayID) | ~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~ cc1plus: all warnings being treated as errors
Attachments
Add attachment
proposed patch, testcase, etc.
Przemyslaw Gorszkowski
Comment 1
2024-04-23 04:12:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27626
EWS
Comment 2
2024-04-23 05:55:20 PDT
Committed
277865@main
(77fd27c0419a): <
https://commits.webkit.org/277865@main
> Reviewed commits have been landed. Closing PR #27626 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-04-23 05:56:18 PDT
<
rdar://problem/126916093
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug