Cherry-pick 277865@main (77fd27c0419a). https://bugs.webkit.org/show_bug.cgi?id=273116

[WPE] Missing UNUSED_PARAM for screendisplayID in PlatformScreenWPE
    https://bugs.webkit.org/show_bug.cgi?id=273116

    Reviewed by Miguel Gomez.

    Without this change and disabled ENABLE_WPE_PLATFORM there is a compiler
    error about "unused parameter".

    * Source/WebCore/platform/wpe/PlatformScreenWPE.cpp:
    (WebCore::screenDPI):

    Canonical link: https://commits.webkit.org/277865@main

Canonical link: https://commits.webkit.org/274313.197@webkitglib/2.44